main.tf
data "aws_ami" "app_ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["bitnami-tomcat-*-x86_64-hvm-ebs-nami"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["979382823631"] # Bitnami
}

data "aws_vpc"  "default"  {
  default  = true
}


module "web_vpc" {
  source = "terraform-aws-modules/vpc/aws"

  name = "dev"
  cidr = "10.0.0.0/16"

  azs             = ["us-west-2a", "us-west-2b", "us-west-2c"]

  public_subnets  = ["10.0.101.0/24", "10.0.102.0/24", "10.0.103.0/24"]


  tags = {
    Terraform = "true"
    Environment = "dev"
  }
}


module "autoscaling" {
  source  = "terraform-aws-modules/autoscaling/aws"
  version = "9.0.2"
  # insert the 1 required variable here
  name = "web"
  min_size = 1
  max_size = 2

  vpc_zone_identifier = module.web_vpc.public_subnets
  target_group_arns = module.web-alb.target_group_arns
  security_groups  = [module.web_sg.security_group_id ]

  image_id           = data.aws_ami.app_ami.id
  instance_type      = var.instance_type

}

module "web_alb" {
  source = "terraform-aws-modules/alb/aws"

  name    = "web-alb"
  vpc_id  = module.web_vpc.vpc_id

  subnets =module.web_vpc.public_subnets
  security_groups = [module.web_sg.security_group_id ]

 
  

  http_tcp_listeners = [
    {
      port     = 80
      protocol = "HTTP"
      target_group_index = 0
    }
  ]
  
  

  target_groups = {
      name_prefix      = "web-"
      protocol         = "HTTP"
      port             = 80
      target_type      = "instance"
    
  }

  tags = {
    Environment = "Development"
    Project     = "Example"
  }
}


module "web_sg" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "5.3.1"
  name = "web-new"
  vpc_id  = module.web_vpc.vpc_id

  ingress_rules = ["http-80-tcp","https-443-tcp"]
  ingress_cidr_blocks  =   ["0.0.0.0/0"]

  egress_rules = ["all-all"]
  egress_cidr_blocks  =   ["0.0.0.0/0"]
}


resource "aws_security_group" "web" {
  name = "web"
  description = "Allow http and https in.Allow everything out"
  vpc_id  = data.aws_vpc.default.id
}

resource "aws_security_group_rule" "web_http_in" {
  type = "ingress"
  from_port = 80
  to_port = 80 
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id  = aws_security_group.web.id
}

resource "aws_security_group_rule" "web_https_in" {
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp" 
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id  = aws_security_group.web.id
}

resource "aws_security_group_rule" "web_everything_out" {
  type = "egress"
  from_port = 0
  to_port = 0 
  protocol = "-1" 
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id  = aws_security_group.web.id
}
